# ACC

./: main_2.py  pyproject.toml  track_classes.py
tabs/: event_info.py
tabs/tracking/: reifenverschleiss.py  rundenzeiten.py  spritverbrauch.py  uebersicht.py
tabs/tracking/components/: car_image.py  tyre_box.py
utils/: time_parser.py
