[project]
name = "ACC"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Luggi003",email = "al3320@mci4me.at"},
]
dependencies = ["streamlit>=1.58.0", "bs4>=0.0.2"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
